--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Mm]emoryCaptures/
+/[Aa]ssets/KinematicCharacterController/
+/[Aa]ssets/Netick/
 
 # Never ignore Asset meta data
 !/[Aa]ssets/**/*.meta
